# TerminalMuseum

./: README.md  main.py  out.json  pyproject.toml
terminalmuseum/: main.py
terminalmuseum/data/: objects.json
