[tool.poetry]
name = "terminalmuseum"
version = "0.1.1"
description = "TerminmalMuseum is a CLI Tool that displays a random piece of classical art onto your Terminal."
authors = ["edincitaku <edin.citaku@gmail.com>"]
license = "APACHE 2.0"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
terminalmuseum = 'terminalmuseum.main:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
